0.16
 - Add handling of css_src().
 - Fix DEPENDENCIES section in doc.
 - Fix default value of 'tags' parameter in doc.
 - Sort parameters in doc.
 - Update copyright years.

0.15 2023-06-20T10:33:58+02:00
 - Fix test dependencies.

0.14 2023-06-18T22:50:19+02:00
 - Add tests for bad and explicit parameter 'tags' values.
 - Pass $env variable to _css(), _tags_middle() and _cleanup() methods.

0.13 2023-05-29T16:49:03+02:00
 - Move defaults to _prepare_app() directly. Possible to rewrite/place in
   module, which inherits this.
 - Update Module::Install to 1.21 version.

0.12 2023-02-10T23:04:51+01:00
 - Fix CSS processing from Tags::HTML::Page::Begin.

0.11 2023-02-10T22:48:37+01:00
 - Rewrite to new Tags::HTML::Page::Begin@0.16.

0.10 2023-01-23T13:25:47+01:00
 - Add css_init() accessor and update to new Tags::HTML::Page::Begin.
 - Update copyright years.

0.09 2022-11-04T01:54:46+01:00
 - Add _cleanup() method to overwrite.

0.08 2022-10-29T17:07:43+02:00
 - Add script_js() and script_js_src() methods.
 - Set preserved for style element in Tags default.

0.07 2022-09-12T18:53:17+02:00
 - Add better checks for css() and tags() accessors.
 - Rename examples to better names.

0.06 2022-07-08T00:21:53+02:00
 - Update Tags::HTML::Page::Begin to 0.13.

0.05 2022-05-13T18:01:38+02:00
 - Add test for app without title.
 - Fix minimal dependency for Tags::HTML::Page::Begin. With optional title
   element.

0.04 2022-05-12T14:17:02+02:00
 - Rewrite prepare_app() and creating of default 'tags' and 'css' objects.
   Add errors for bad objects.

0.03 2022-05-11T10:26:21+02:00
 - Fix copyright years.
 - Fix doc escape sequences.

0.02 2022-02-28T12:38:08+01:00
 - Fix minimal dependency for Tags::HTML::Page::Begin. There is fix for
   situation without CSS. Fixes GH#1 (Thanks Slaven Rezić).

0.01 2022-02-27T19:55:18+01:00
 - First version.