@@ -2,6 +2,7 @@
  - Add handling of css_src().
  - Fix DEPENDENCIES section in doc.
  - Fix default value of 'tags' parameter in doc.
+ - Move inicialization of page begin from prepare to actions phase.
  - Sort parameters in doc.
  - Update copyright years.
 
